--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,10 @@
 name: GitHub Snake Game
 
+# Trigger the workflow
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0 * * *"   # daily at midnight UTC
+  workflow_dispatch:       # manual trigger
   push:
     branches:
       - main
@@ -14,10 +15,12 @@ jobs:
     timeout-minutes: 10
 
     steps:
+      # Step 1: Checkout repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Generate GitHub Contributions Snake Animations
+      # Step 2: Generate GitHub Snake Animations
+      - name: Generate Snake Animations
         uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
@@ -28,10 +31,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # Step 3: Deploy to the 'output' branch
       - name: Deploy to Output Branch
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: output
-          commit_message: "Update snake animation [skip ci]"
+          commit_message: "Update Snake animation [skip ci]"
